[package]
edition = "2021"
name = "ccash-rs"
version = "2.0.0-beta"
authors = ["STBoyden <sam@stboyden.com>"]
description = "The Rust bindings for the CCash ledger API (CCash available here: https://github.com/EntireTwix/CCash)."
homepage = "http://github.com/STBoyden/ccash-rs"
documentation = "https://docs.rs/ccash-rs"
keywords = ["minecraft", "webdev", "ccash", "api"]
license = "MIT"
repository = "http://github.com/STBoyden/ccash-rs"

[dependencies]
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
velcro = "0.5.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
interpret_endpoint_errors_as_false = []

